# apex-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  CREDITS.md  HANDOFF_2026-01-29.md  HANDOFF_SETUP.md  NEXT_STEPS.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  security_audit.md  simple_test.py  test_live_setup.py  verify_neo4j.py  verify_postgres.py  verify_setup.py
docs/: PRE_COMMIT_SETUP.md  library_evaluation.md
scripts/: setup_all.py  start_neo4j.ps1
sql/: init.sql
src/: __init__.py  server.py
src/ingestion/: __init__.py  chunker.py  code_indexer.py  document_parser.py  pipeline.py
src/retrieval/: __init__.py  hybrid_search.py  par_rag.py  reranker.py
src/security/: __init__.py  pdf_security.py
src/storage/: __init__.py  neo4j_client.py  postgres_client.py  schemas.py
src/tools/: memory.py  search.py
src/utils/: __init__.py  embedding.py  llm_client.py  metadata.py
tests/: test_embedding.py  test_mcp_tools.py  test_memory.py  test_metadata.py  test_neo4j_client.py  test_retrieval.py  test_schemas.py  test_security.py
tests/e2e/: README.md  __init__.py  conftest.py  test_data_ingestion.py  test_database_init.py  test_error_handling.py  test_mcp_integration.py  test_memory_operations.py  test_retrieval_workflows.py
tests/fixtures/: sample_code.py  sample_doc.html  sample_doc.md
tests/postgres/: test_postgres_client.py
