[project]
name = "apex-rag"
version = "0.1.0"
description = "High-accuracy Retrieval-Augmented Generation system for LLM coding agents"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # MCP Server
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    
    # Database Clients
    "asyncpg>=0.30.0",           # PostgreSQL async
    "pgvector>=0.3.0",           # pgvector extension
    "neo4j>=5.0.0",              # Memgraph uses Neo4j protocol
    
    # Embedding & NLP
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    
    # Document Parsing
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.0",
    "docutils>=0.21.0",
    
    # Tree-sitter for code parsing
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    
    # Utilities
    "httpx>=0.28.0",             # Async HTTP for z.AI
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

pdf = [
    "magic-pdf>=0.8.0",          # MinerU - requires separate setup
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
